aggiungere contenuti alla sezione hosting city

--- a/index.html
+++ b/index.html
@@ -409,7 +409,9 @@
 </section>
 
 <section class="hosting-city">
-    
+    <h2>The hosting City</h2>
+    <p> This year Name City is the tournament hosting city!</p>
+
 
 </section>
     
