--- a/index.html
+++ b/index.html
@@ -8,7 +8,50 @@
     <title>Table Tournament</title>
 </head>
 <body>
+   
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+    <a href="#" class="navbar-brand mb-0 h1">Table Tournament ER
+            </a>
+            <button 
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            class="navbar-toggler"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNav"> 
+            <ul class="navbar-nav"></ul>
+            <li class="nav-item active">
+                <a href="#" class="nav-link active">
+                    Home
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a href="#" class="nav-link">
+                    Editions
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a href="#" class="nav-link">
+                    Host Cities
+                </a>
+            </li>
+        </div>
 
+    </div>
+</nav>
+
+
+
+
+
+
+
+<!--
     <nav class="navbar bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -40,7 +83,7 @@
           </div>
         </div>
       </nav>
-
+-->
     <section class="Tournament-edition">
 
     </section>
